--- a/src/Landingpage.html
+++ b/src/Landingpage.html
@@ -3,16 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="./output.css" rel="stylesheet">
     <title>LandingPage</title>
 </head>
 <body class="m-0 p-0">
-
-    <header class="">
-        <div class="">
-            
+    
+    <header class="bg-[#101820] w-[100%] backdrop-blur-2xl flex top-0 left-0 justify-between items-center z-[1000] px-[50px]">
+        <div class="flex items-center">
+            <img src="img/Quizzical-logo.png" alt="" class="w-[80px] h-[78px]">
+            <h1 class="text-[#FEE715] font-bold">QUIZZICAL HUB</h1>
         </div>
+        <ul class="flex relative right-[50px] text-white items-center">
+            <li class="ml-[2rem]">
+                <i class="fa-solid fa-house mx-1 w-5 mt-1 text-center flex-shrink-0"></i>
+                <a href="#" class="text-white hover:text-[#FEE715] transition-all ease-in-[0.5s]">Home</a>
+            </li>
+
+            <li class="ml-[2rem]">
+                <i class="fa-solid fa-book mx-1 w-5 mt-1 text-center flex-shrink-0"></i>
+                <a href="#" class="text-white hover:text-[#FEE715] transition-all ease-in-[0.5s]">About</a>
+            </li>
+
+            <li class="ml-[2rem]">
+                <i class="fa-solid fa-chart-column mx-1 w-5 mt-1 text-center flex-shrink-0"></i>
+                <a href="#" class="text-white hover:text-[#FEE715] transition-all ease-in-[0.5s]">Others</a>
+            </li>
+
+            <a href="#"><input type="button" value="Get Started" class="ml-[2rem] text-black rounded-[10px] bg-[#FEE715] p-[8px] font-medium hover:bg-[#ccb800] transition-all ease-in-[0.5s]"></a>
+        </ul>
     </header>
 
+    <div class="py-[2rem] px-[7rem] max-w-[1000px] m-auto">
+        <div class="items-center text-center mt-[5rem]">
+            <h1 class="w-[300px] p-[5px] bg-[#FEE715] rounded-[10px] font-bold relative left-[50%] translate-[-50%]">
+                SMAC PROGRAMMING QUIZ
+            </h1>
+        </div>
+        <div class="text-center">
+            <h1 class="text-[4rem] font-bold">SMAC QUIZZICAL HUB</h1>
+            <p class="font-medium text-[1.3rem] text-sm/6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id at sunt ipsum commodi aperiam, eaque eveniet repudiandae totam expedita nostrum eum qui molestiae quas hic ea assumenda, error tenetur. In.</p>
+            <div class="mt-[2rem]">
+                <a href="" class="mr-[1rem] text-white bg-black p-[15px] font-semibold text-[1.20rem] rounded-[10px] items-center"><input type="button" value="Get Started" class=""><i class="fa-solid fa-angle-right text-[1.20rem] ml-5 arrow-transition"></i></a>
+                <a href="" class="border-[2px] p-[15px] font-semibold text-[1.20rem] rounded-[10px]"><input type="button" value="Explore" class=""></a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
