Add Prog Languages

--- a/src/Landingpage.html
+++ b/src/Landingpage.html
@@ -34,19 +34,25 @@
         </ul>
     </header>
 
-    <div class="py-[2rem] px-[7rem] max-w-[1000px] m-auto">
-        <div class="items-center text-center mt-[5rem]">
+    <div class="py-[5rem] px-[10rem] max-w-[1200px] m-auto">
+        <div class="items-center text-center mt-[2rem]">
             <h1 class="w-[300px] p-[5px] bg-[#FEE715] rounded-[10px] font-bold relative left-[50%] translate-[-50%]">
                 SMAC PROGRAMMING QUIZ
             </h1>
         </div>
         <div class="text-center">
             <h1 class="text-[4rem] font-bold">SMAC QUIZZICAL HUB</h1>
-            <p class="font-medium text-[1.3rem] text-sm/6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id at sunt ipsum commodi aperiam, eaque eveniet repudiandae totam expedita nostrum eum qui molestiae quas hic ea assumenda, error tenetur. In.</p>
-            <div class="mt-[2rem]">
+            <p class="font-medium text-[1.3rem] text-sm/5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id at sunt ipsum commodi aperiam, eaque eveniet repudiandae totam expedita nostrum eum qui molestiae quas hic ea assumenda, error tenetur. In.</p>
+            <div class="mt-[2rem] mb-[1rem]">
                 <a href="" class="mr-[1rem] text-white bg-black p-[15px] font-semibold text-[1.20rem] rounded-[10px] items-center"><input type="button" value="Get Started" class=""><i class="fa-solid fa-angle-right text-[1.20rem] ml-5 arrow-transition"></i></a>
                 <a href="" class="border-[2px] p-[15px] font-semibold text-[1.20rem] rounded-[10px]"><input type="button" value="Explore" class=""></a>
             </div>
+        </div>
+
+        <div class="p-[1rem] text-center px-[5rem] py-[3rem] mt-[2rem]">
+            <i class="fa-brands fa-html5 text-[4rem]"></i>
+            <i class="fa-brands fa-css3 text-[4rem] ml-[8rem]"></i>
+            <i class="fa-brands fa-js text-[4rem] ml-[8rem]"></i>
         </div>
     </div>
 </body>
