--- a/src/Landingpage.html
+++ b/src/Landingpage.html
@@ -56,35 +56,44 @@
         </div>
 
         <div class="p-[1rem] text-center px-[5rem] py-[3rem] mt-[2rem]">
-            <i class="fa-brands fa-html5 text-[4rem] opacity-70 transition-all ease-in-[0.5s] hover:opacity-100"></i>
-            <i class="fa-brands fa-css3 text-[4rem] ml-[8rem] opacity-70 transition-all ease-in-[0.5s] hover:opacity-100"></i>
-            <i class="fa-brands fa-js text-[4rem] ml-[8rem] opacity-70 transition-all ease-in-[0.5s] hover:opacity-100"></i>
+            <i class="fa-brands fa-html5 text-[4rem] opacity-50 transition-all ease-in-[0.5s] hover:opacity-100"></i>
+            <i class="fa-brands fa-css3 text-[4rem] ml-[8rem] opacity-50 transition-all ease-in-[0.5s] hover:opacity-100"></i>
+            <i class="fa-brands fa-js text-[4rem] ml-[8rem] opacity-50 transition-all ease-in-[0.5s] hover:opacity-100"></i>
         </div>
     </div>
 
-    <div class="py-[4rem] px-[10rem] border-[1px]" id="About">
-        <div class="text-center items-center">
+    <div class="py-[4rem] px-[2rem] border-t-1 border-black max-w-[1200px] m-auto" id="About">
+        <div class="text-center items-center px-[10rem]">
             <h1 class="text-black text-[3rem] font-bold items-center text-center">What are we about?</h1>
         <p>
             Welcome to Smac Quizzical Hub — the hangout spot for ICT students at SMAC who want to have fun while leveling up their coding skills.
             We turn HTML, CSS, and JavaScript into exciting quizzes and challenges that keep your brain sharp and your skills fresh.</p>
         </div>
-        <div class="grid grid-cols-3 gap-[10px] mt-[4rem] max-w-[1200px] m-auto shadow-md">
-            <div class="p-[10px] text-center border-[1px] rounded-[5px] border-[#e7e7e7]">
-                <i class="fa-solid fa-book mx-1 w-5 mt-1 text-center flex-shrink-0 text-[2rem]"></i>
+        <div class="grid grid-cols-2 gap-[10px] mt-[4rem] max-w-[1200px] m-auto">
+            <div class="p-[10px] text-center border-[1px] rounded-[5px] border-[#e7e7e7] shadow-md">
+                <i class="fa-solid fa-book mx-1 w-5 mt-1 text-center flex-shrink-0 text-[2rem] text-blue-600"></i>
                 <h4 class="font-semibold text-[1.40rem]">About Website</h4>
-                <p>the ultimat
+                <p>
+                    The ultimate
                     Smac Quizzical Hub is a learning and challenge platform built for ICT students of SMAC who want to sharpen their web development skills.
                     We combine HTML, CSS, and JavaScript.
                 </p>
             </div>
             <div class="p-[10px] text-center border-[1px] rounded-[5px] border-[#e7e7e7] shadow-md">
-                <i class="fa-solid fa-code mx-1 w-5 mt-1 text-center flex-shrink-0 text-[2rem]"></i>
+                <i class="fa-solid fa-code mx-1 w-5 mt-1 text-center flex-shrink-0 text-[2rem] text-green-600"></i>
                 <h4 class="font-semibold text-[1.40rem]">St. Matthew Academy of Cavite</h4>
                 <p class="text-gray-700">Join Quizzical Hub and start showcasing your skills.</p>
             </div>
             <div class="p-[10px] text-center border-[1px] rounded-[5px] border-[#e7e7e7] shadow-md">
-                <i class="fa-brands fa-dev mx-1 w-5 mt-1 text-center flex-shrink-0 text-[2rem]"></i>
+                <i class="fa-solid fa-bookmark mx-1 w-5 mt-1 text-center flex-shrink-0 text-[2rem] text-violet-700"></i>
+                <h4 class="font-semibold text-[1.40rem] mb-[1rem]">Programming Languages</h4>
+                <i class="fa-brands fa-html5 text-[2rem] opacity-80 transition-all ease-in-[0.5s] hover:opacity-100"></i>
+                <i class="fa-brands fa-css3 text-[2rem] ml-[1rem] opacity-80 transition-all ease-in-[0.5s] hover:opacity-100"></i>
+                <i class="fa-brands fa-js text-[2rem] ml-[1rem] opacity-80 transition-all ease-in-[0.5s] hover:opacity-100"></i>
+                </a>
+            </div>
+            <div class="p-[10px] text-center border-[1px] rounded-[5px] border-[#e7e7e7] shadow-md">
+                <i class="fa-solid fa-people-group mx-1 w-5 mt-1 text-center flex-shrink-0 text-[2rem] text-violet-700"></i>
                 <h4 class="font-semibold text-[1.40rem] mb-[1rem]">Quizzical Hub Developers</h4>
                 <a href="#" class="p-[10px] text-black mt-[1rem] text-[1rem] rounded-[5px] border-[1px] border-black">
                     <input type="button" value="View Developer Team">
