--- a/src/Landingpage.html
+++ b/src/Landingpage.html
@@ -27,7 +27,7 @@
 
             <li class="ml-[2rem]">
                 <i class="fa-solid fa-chart-column mx-1 w-5 mt-1 text-center flex-shrink-0"></i>
-                <a href="#" class="text-white transition-all ease-in-[0.5s] hover:text-[#FEE715]">Others</a>
+                <a href="#Howitworks" class="text-white transition-all ease-in-[0.5s] hover:text-[#FEE715]">How It Works</a>
             </li>
 
             <a href="#"><input type="button" value="Get Started" class="ml-[2rem] text-black rounded-[10px] bg-[#FEE715] p-[8px] font-medium transition-all ease-in-[0.5s] hover:bg-[#ccb800]"></a>
@@ -42,9 +42,10 @@
         </div>
         <div class="text-center">
             <h1 class="text-[4rem] font-bold text-[#101820]">SMAC QUIZZICAL HUB</h1>
-            <p class="font-medium text-[1.3rem] text-sm/6 text-gray-700">
-                Smac Quizzical Hub is e space for ICT students of SMAC to explore, practice, and challenge their programming skills. 
-                Focused on HTML, CSS, and JavaScript, Join Quizzical Hub and start showcasing your skills.
+            <p class="font-normal text-[1.3rem] text-sm/6 text-gray-700 px-[3rem]">
+                ICT students of St. Matthew Academy! Here, learning meets fun as you test your skills in HTML, CSS, JavaScript, 
+                and more through exciting quizzes and challenges
+                Join Quizzical Hub and start showcasing your skills.
             </p>
             <div class="mt-[2rem] mb-[1rem]">
                 <a href="" class="mr-[1rem] text-white bg-black p-[15px] font-semibold text-[1.20rem] rounded-[10px] items-center transition-all ease-in-[0.5s] hover:bg-[#101820]">
@@ -57,7 +58,7 @@
 
         <div class="p-[1rem] text-center px-[5rem] py-[3rem] mt-[2rem]">
             <i class="fa-brands fa-html5 text-[4rem] opacity-50 transition-all ease-in-[0.5s] hover:opacity-100"></i>
-            <i class="fa-brands fa-css3 text-[4rem] ml-[8rem] opacity-50 transition-all ease-in-[0.5s] hover:opacity-100"></i>
+            <i class="fa-brands fa-css3 text-[4rem] ml-[8rem] transition-all ease-in-[0.5s] hover:opacity-50"></i>
             <i class="fa-brands fa-js text-[4rem] ml-[8rem] opacity-50 transition-all ease-in-[0.5s] hover:opacity-100"></i>
         </div>
     </div>
@@ -86,10 +87,10 @@
             </div>
             <div class="p-[10px] text-center border-[1px] rounded-[5px] border-[#e7e7e7] shadow-md">
                 <i class="fa-solid fa-bookmark mx-1 w-5 mt-1 text-center flex-shrink-0 text-[2rem] text-violet-700"></i>
-                <h4 class="font-semibold text-[1.40rem] mb-[1rem]">Programming Languages</h4>
+                <h4 class="font-semibold text-[1.40rem] mb-[1rem]">Quiz Programming Languages</h4>
                 <i class="fa-brands fa-html5 text-[2rem] opacity-80 transition-all ease-in-[0.5s] hover:opacity-100"></i>
-                <i class="fa-brands fa-css3 text-[2rem] ml-[1rem] opacity-80 transition-all ease-in-[0.5s] hover:opacity-100"></i>
-                <i class="fa-brands fa-js text-[2rem] ml-[1rem] opacity-80 transition-all ease-in-[0.5s] hover:opacity-100"></i>
+                <i class="fa-brands fa-css3 text-[2rem] ml-[5px] opacity-80 transition-all ease-in-[0.5s] hover:opacity-100"></i>
+                <i class="fa-brands fa-js text-[2rem] ml-[5px] opacity-80 transition-all ease-in-[0.5s] hover:opacity-100"></i>
                 </a>
             </div>
             <div class="p-[10px] text-center border-[1px] rounded-[5px] border-[#e7e7e7] shadow-md">
@@ -99,6 +100,73 @@
                     <input type="button" value="View Developer Team">
                 <i class="fa-solid fa-angle-right text-[1rem] ml-2 arrow-transition"></i>
                 </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="py-[4rem] px-[2rem] border-t-1 border-black max-w-[1200px] m-auto mt-[5rem]" id="Howitworks">
+        <div class="grid grid-cols-2 gap-[10px] mt-[4rem] max-w-[1200px] m-auto">
+            <div class="border-[#e7e7e7] shadow-md p-[2rem] rounded-[5px]">
+                <div>
+                    <h4 class="p-[5px] bg-[#FEE715] rounded-[10px]">How to get Started</h4>
+                    <h1 class="text-[2rem] font-bold">Four simple steps</h1>
+                </div>
+                <div class="flex items-center mt-[2rem]">
+                    <i class="fa-solid fa-1 text-[2rem] p-[1.50rem] border-[1px] text-white bg-black rounded-[10px]"></i>
+                    <div class="items-center ml-[1rem]">
+                        <h4 class="ml-[10px] text-[1.50rem] font-bold">Create Your Account</h4>
+                        <p class="ml-[10px] text-[1rem]">Sign up in less than a minute</p>
+                    </div>
+                </div>
+                <div class="flex items-center mt-[2rem]">
+                    <i class="fa-solid fa-2 text-[2rem] p-[1.50rem] border-[1px] text-white bg-black rounded-[10px]"></i>
+                    <div class="items-center ml-[1rem]">
+                        <h4 class="ml-[10px] text-[1.50rem] font-bold">Login Your Account</h4>
+                        <p class="ml-[10px] text-[1rem]">Login in less than a minute</p>
+                    </div>
+                </div>
+                <div class="flex items-center mt-[2rem]">
+                    <i class="fa-solid fa-3 text-[2rem] p-[1.50rem] border-[1px] text-white bg-black rounded-[10px]"></i>
+                    <div class="items-center ml-[1rem]">
+                        <h4 class="ml-[10px] text-[1.50rem] font-bold">Choose Your Path</h4>
+                        <p class="ml-[10px] text-[1rem]">Fill in the blank or Multiple Choice</p>
+                    </div>
+                </div>
+                <div class="flex items-center mt-[2rem]">
+                    <i class="fa-solid fa-4 text-[2rem] p-[1.50rem] border-[1px] text-white bg-black rounded-[10px]"></i>
+                    <div class="items-center ml-[1rem]">
+                        <h4 class="ml-[10px] text-[1.50rem] font-bold">Get Started</h4>
+                        <p class="ml-[10px] text-[1rem]">Play Quiz and Enjoy!</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="border-[#e7e7e7] shadow-md p-[2rem] rounded-[5px]">
+                <div>
+                    <h4 class="p-[5px] bg-[#FEE715] rounded-[10px]">Developers Team</h4>
+                    <h1 class="text-[2rem] font-bold">Team</h1>
+                </div>
+                <div class="flex items-center mt-[2rem]">
+                    <i class="fa-solid fa-user text-[2rem] p-[1.50rem] border-[1px] text-white bg-black rounded-[10px]"></i>
+                    <div class="items-center ml-[1rem]">
+                        <h4 class="ml-[10px] text-[1.50rem] font-bold">Christian Daniel Cagas</h4>
+                        <p class="ml-[10px] text-[1rem]">FrontEnd Dev - Overall Design</p>
+                    </div>
+                </div>
+                <div class="flex items-center mt-[2rem]">
+                    <i class="fa-solid fa-user text-[2rem] p-[1.50rem] border-[1px] text-white bg-black rounded-[10px]"></i>
+                    <div class="items-center ml-[1rem]">
+                        <h4 class="ml-[10px] text-[1.50rem] font-bold">Laurence Singh</h4>
+                        <p class="ml-[10px] text-[1rem]">FrontEnd Dev</p>
+                    </div>
+                </div>
+                <div class="flex items-center mt-[2rem]">
+                    <i class="fa-solid fa-user text-[2rem] p-[1.50rem] border-[1px] text-white bg-black rounded-[10px]"></i>
+                    <div class="items-center ml-[1rem]">
+                        <h4 class="ml-[10px] text-[1.50rem] font-bold">Haley Colocado</h4>
+                        <p class="ml-[10px] text-[1rem]">FrontEnd Dev</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
