--- a/src/Landingpage.html
+++ b/src/Landingpage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="./output.css" rel="stylesheet">
-    <title>LandingPage</title>
+    <title>Quizzical Hub - LandingPage</title>
 </head>
 <body class="m-0 p-0">
     
@@ -30,7 +30,9 @@
                 <a href="#Howitworks" class="text-white transition-all ease-in-[0.5s] hover:text-[#FEE715]">How It Works</a>
             </li>
 
-            <a href="#"><input type="button" value="Get Started" class="ml-[2rem] text-black rounded-[10px] bg-[#FEE715] p-[8px] font-medium transition-all ease-in-[0.5s] hover:bg-[#ccb800]"></a>
+            <a href="">
+                <input type="button" value="Get Started" class="ml-[2rem] text-black rounded-[10px] bg-[#FEE715] p-[8px] font-medium transition-all ease-in-[0.5s] hover:bg-[#ccb800] active:opacity-70">
+            </a>
         </ul>
     </header>
 
@@ -48,22 +50,22 @@
                 Join Quizzical Hub and start showcasing your skills.
             </p>
             <div class="mt-[2rem] mb-[1rem]">
-                <a href="" class="mr-[1rem] text-white bg-black p-[15px] font-semibold text-[1.20rem] rounded-[10px] items-center transition-all ease-in-[0.5s] hover:bg-[#101820]">
+                <a href="" class="mr-[1rem] text-white bg-black p-[15px] font-semibold text-[1.20rem] rounded-[10px] items-center transition-all ease-in-[0.5s] hover:bg-[#101820] active:opacity-70">
                     <input type="button" value="Get Started" class="">
                     <i class="fa-solid fa-angle-right text-[1.20rem] ml-5 arrow-transition"></i></a>
-                <a href="" class="border-[2px] p-[15px] font-semibold text-[1.20rem] rounded-[10px] transition-all ease-in-[0.5s] hover:rounded-tr-[20px] hover:rounded-bl-[20px]">
+                <a href="#Howitworks" class="border-[2px] p-[15px] font-semibold text-[1.20rem] rounded-[10px] transition-all ease-in-[0.5s] hover:rounded-tr-[20px] hover:rounded-bl-[20px] active:opacity-70">
                     <input type="button" value="See How It Works" class=""></a>
             </div>
         </div>
 
         <div class="p-[1rem] text-center px-[5rem] py-[3rem] mt-[2rem]">
-            <i class="fa-brands fa-html5 text-[4rem] opacity-50 transition-all ease-in-[0.5s] hover:opacity-100"></i>
+            <i class="fa-brands fa-html5 text-[4rem] text-[#FEE715] transition-all ease-in-[0.5s] hover:text-black"></i>
             <i class="fa-brands fa-css3 text-[4rem] ml-[8rem] transition-all ease-in-[0.5s] hover:opacity-50"></i>
-            <i class="fa-brands fa-js text-[4rem] ml-[8rem] opacity-50 transition-all ease-in-[0.5s] hover:opacity-100"></i>
+            <i class="fa-brands fa-js text-[4rem] ml-[8rem] text-[#FEE715] transition-all ease-in-[0.5s] hover:text-black"></i>
         </div>
     </div>
 
-    <div class="py-[4rem] px-[2rem] border-t-1 border-black max-w-[1200px] m-auto" id="About">
+    <div class="py-[8rem] px-[2rem] border-t-1 border-black max-w-[1200px] m-auto" id="About">
         <div class="text-center items-center px-[10rem]">
             <h1 class="text-black text-[3rem] font-bold items-center text-center">What are we about?</h1>
         <p>
@@ -71,7 +73,7 @@
             We turn HTML, CSS, and JavaScript into exciting quizzes and challenges that keep your brain sharp and your skills fresh.</p>
         </div>
         <div class="grid grid-cols-2 gap-[10px] mt-[4rem] max-w-[1200px] m-auto">
-            <div class="p-[10px] text-center border-[1px] rounded-[5px] border-[#e7e7e7] shadow-md">
+            <div class="p-[10px] text-center border-[1px] rounded-[5px] border-gray-100 transition-all ease-in-[0.5s] shadow-lg hover:shadow-xl/20">
                 <i class="fa-solid fa-book mx-1 w-5 mt-1 text-center flex-shrink-0 text-[2rem] text-blue-600"></i>
                 <h4 class="font-semibold text-[1.40rem]">About Website</h4>
                 <p>
@@ -80,12 +82,12 @@
                     We combine HTML, CSS, and JavaScript.
                 </p>
             </div>
-            <div class="p-[10px] text-center border-[1px] rounded-[5px] border-[#e7e7e7] shadow-md">
+            <div class="p-[10px] text-center border-[1px] rounded-[5px] border-gray-100 transition-all ease-in-[0.5s] shadow-lg hover:shadow-xl/20">
                 <i class="fa-solid fa-code mx-1 w-5 mt-1 text-center flex-shrink-0 text-[2rem] text-green-600"></i>
                 <h4 class="font-semibold text-[1.40rem]">St. Matthew Academy of Cavite</h4>
                 <p class="text-gray-700">Join Quizzical Hub and start showcasing your skills.</p>
             </div>
-            <div class="p-[10px] text-center border-[1px] rounded-[5px] border-[#e7e7e7] shadow-md">
+            <div class="p-[10px] text-center border-[1px] rounded-[5px] border-gray-100  transition-all ease-in-[0.5s] shadow-lg hover:shadow-xl/20">
                 <i class="fa-solid fa-bookmark mx-1 w-5 mt-1 text-center flex-shrink-0 text-[2rem] text-violet-700"></i>
                 <h4 class="font-semibold text-[1.40rem] mb-[1rem]">Quiz Programming Languages</h4>
                 <i class="fa-brands fa-html5 text-[2rem] opacity-80 transition-all ease-in-[0.5s] hover:opacity-100"></i>
@@ -93,7 +95,7 @@
                 <i class="fa-brands fa-js text-[2rem] ml-[5px] opacity-80 transition-all ease-in-[0.5s] hover:opacity-100"></i>
                 </a>
             </div>
-            <div class="p-[10px] text-center border-[1px] rounded-[5px] border-[#e7e7e7] shadow-md">
+            <div class="p-[10px] text-center border-[1px] rounded-[5px] border-gray-100 transition-all ease-in-[0.5s] shadow-lg hover:shadow-xl/20">
                 <i class="fa-solid fa-people-group mx-1 w-5 mt-1 text-center flex-shrink-0 text-[2rem] text-violet-700"></i>
                 <h4 class="font-semibold text-[1.40rem] mb-[1rem]">Quizzical Hub Developers</h4>
                 <a href="#" class="p-[10px] text-black mt-[1rem] text-[1rem] rounded-[5px] border-[1px] border-black">
@@ -104,68 +106,82 @@
         </div>
     </div>
 
-    <div class="py-[4rem] px-[2rem] border-t-1 border-black max-w-[1200px] m-auto mt-[5rem]" id="Howitworks">
-        <div class="grid grid-cols-2 gap-[10px] mt-[4rem] max-w-[1200px] m-auto">
-            <div class="border-[#e7e7e7] shadow-md p-[2rem] rounded-[5px]">
+    <div class="py-[2rem] px-[2rem] border-t-1 border-black max-w-[1200px] m-auto mt-[5rem]" id="Howitworks">
+        <div class="grid grid-cols-2 gap-[2rem] mt-[4rem] max-w-[1200px] m-auto">
+            <div class="border-gray-100 shadow-lg p-[2rem] rounded-[5px]">
                 <div>
-                    <h4 class="p-[5px] bg-[#FEE715] rounded-[10px]">How to get Started</h4>
+                    <h4 class="p-[10px] bg-[#FEE715] rounded-[10px] w-[200px] mb-[10px]">How to get Started</h4>
                     <h1 class="text-[2rem] font-bold">Four simple steps</h1>
                 </div>
-                <div class="flex items-center mt-[2rem]">
-                    <i class="fa-solid fa-1 text-[2rem] p-[1.50rem] border-[1px] text-white bg-black rounded-[10px]"></i>
+                <div class="flex items-center mt-[2rem] transition-all ease-in-[0.5s] hover:shadow-xl bg-gray-50">
+                    <i class="fa-solid fa-1 text-[2rem] p-[1rem] border-[1px] text-white bg-black rounded-[10px]"></i>
                     <div class="items-center ml-[1rem]">
                         <h4 class="ml-[10px] text-[1.50rem] font-bold">Create Your Account</h4>
-                        <p class="ml-[10px] text-[1rem]">Sign up in less than a minute</p>
+                        <p class="ml-[10px] text-[1rem] text-gray-600">Sign up in less than a minute</p>
                     </div>
                 </div>
-                <div class="flex items-center mt-[2rem]">
-                    <i class="fa-solid fa-2 text-[2rem] p-[1.50rem] border-[1px] text-white bg-black rounded-[10px]"></i>
+                <div class="flex items-center mt-[2rem] transition-all ease-in-[0.5s] hover:shadow-xl bg-gray-50">
+                    <i class="fa-solid fa-2 text-[2rem] p-[1rem] border-[1px] text-white bg-black rounded-[10px]"></i>
                     <div class="items-center ml-[1rem]">
                         <h4 class="ml-[10px] text-[1.50rem] font-bold">Login Your Account</h4>
-                        <p class="ml-[10px] text-[1rem]">Login in less than a minute</p>
+                        <p class="ml-[10px] text-[1rem] text-gray-600">Login in less than a minute</p>
                     </div>
                 </div>
-                <div class="flex items-center mt-[2rem]">
-                    <i class="fa-solid fa-3 text-[2rem] p-[1.50rem] border-[1px] text-white bg-black rounded-[10px]"></i>
+                <div class="flex items-center mt-[2rem] transition-all ease-in-[0.5s] hover:shadow-xl bg-gray-50">
+                    <i class="fa-solid fa-3 text-[2rem] p-[1rem] border-[1px] text-white bg-black rounded-[10px]"></i>
                     <div class="items-center ml-[1rem]">
                         <h4 class="ml-[10px] text-[1.50rem] font-bold">Choose Your Path</h4>
-                        <p class="ml-[10px] text-[1rem]">Fill in the blank or Multiple Choice</p>
+                        <p class="ml-[10px] text-[1rem] text-gray-600">Fill in the blank or Multiple Choice</p>
                     </div>
                 </div>
-                <div class="flex items-center mt-[2rem]">
-                    <i class="fa-solid fa-4 text-[2rem] p-[1.50rem] border-[1px] text-white bg-black rounded-[10px]"></i>
+                <div class="flex items-center mt-[2rem] transition-all ease-in-[0.5s] hover:shadow-xl bg-gray-50">
+                    <i class="fa-solid fa-4 text-[2rem] p-[1rem] border-[1px] text-white bg-black rounded-[10px]"></i>
                     <div class="items-center ml-[1rem]">
                         <h4 class="ml-[10px] text-[1.50rem] font-bold">Get Started</h4>
-                        <p class="ml-[10px] text-[1rem]">Play Quiz and Enjoy!</p>
+                        <p class="ml-[10px] text-[1rem] text-gray-600">Play Quiz and Enjoy!</p>
                     </div>
+                </div>
+                <div class="p-[10px] mt-[10px]">
+                    <p class="mb-[2rem] text-gray-600">Join Quizzical Hub now and start your quiz!</p>
+                    <a href="#" class="p-[20px] mt-[2rem] bg-black text-white font-semibold rounded-[10px] transition-all ease-in-[0.5s] hover:bg-[#101820] active:opacity-70">
+                        <input type="button" value="Get Started">
+                        <i class="fa-solid fa-angle-right text-[1rem] ml-2 arrow-transition"></i>
+                    </a>
                 </div>
             </div>
 
-            <div class="border-[#e7e7e7] shadow-md p-[2rem] rounded-[5px]">
+            <div class="border-gray-100 shadow-lg p-[2rem] rounded-[5px]">
                 <div>
-                    <h4 class="p-[5px] bg-[#FEE715] rounded-[10px]">Developers Team</h4>
+                    <h4 class="p-[10px] bg-[#FEE715] rounded-[10px] w-[200px] mb-[10px]">Developers Team</h4>
                     <h1 class="text-[2rem] font-bold">Team</h1>
                 </div>
-                <div class="flex items-center mt-[2rem]">
+                <div class="flex items-center mt-[2rem] transition-all ease-in-[0.5s] hover:bg-gray-50">
                     <i class="fa-solid fa-user text-[2rem] p-[1.50rem] border-[1px] text-white bg-black rounded-[10px]"></i>
                     <div class="items-center ml-[1rem]">
                         <h4 class="ml-[10px] text-[1.50rem] font-bold">Christian Daniel Cagas</h4>
-                        <p class="ml-[10px] text-[1rem]">FrontEnd Dev - Overall Design</p>
+                        <p class="ml-[10px] text-[1rem] text-gray-600">FrontEnd Dev - Overall Design</p>
                     </div>
                 </div>
-                <div class="flex items-center mt-[2rem]">
+                <div class="flex items-center mt-[2rem] transition-all ease-in-[0.5s] hover:bg-gray-50">
                     <i class="fa-solid fa-user text-[2rem] p-[1.50rem] border-[1px] text-white bg-black rounded-[10px]"></i>
                     <div class="items-center ml-[1rem]">
                         <h4 class="ml-[10px] text-[1.50rem] font-bold">Laurence Singh</h4>
-                        <p class="ml-[10px] text-[1rem]">FrontEnd Dev</p>
+                        <p class="ml-[10px] text-[1rem] text-gray-600">FrontEnd Dev</p>
                     </div>
                 </div>
-                <div class="flex items-center mt-[2rem]">
+                <div class="flex items-center mt-[2rem] transition-all ease-in-[0.5s] hover:bg-gray-50">
                     <i class="fa-solid fa-user text-[2rem] p-[1.50rem] border-[1px] text-white bg-black rounded-[10px]"></i>
                     <div class="items-center ml-[1rem]">
                         <h4 class="ml-[10px] text-[1.50rem] font-bold">Haley Colocado</h4>
-                        <p class="ml-[10px] text-[1rem]">FrontEnd Dev</p>
+                        <p class="ml-[10px] text-[1rem] text-gray-600">FrontEnd Dev</p>
                     </div>
+                </div>
+                <div class="p-[10px] mt-[10px]">
+                    <p class="mb-[2rem] text-gray-600">View Quizzical Hub full team</p>
+                    <a href="#" class="p-[20px] mt-[2rem] bg-black text-white font-semibold rounded-[10px] transition-all ease-in-[0.5s] hover:bg-[#101820] active:opacity-70">
+                        <input type="button" value="View Team">
+                        <i class="fa-solid fa-angle-right text-[1rem] ml-2 arrow-transition"></i>
+                    </a>
                 </div>
             </div>
         </div>
