--- a/src/Landing_page.html
+++ b/src/Landing_page.html
@@ -7,8 +7,7 @@
     <link href="./output.css" rel="stylesheet">
     <title>Quizzical Hub - LandingPage</title>
 </head>
-<body class="m-0 p-0">
-    
+<body class="m-0 p-0 ">
     <header class="bg-[#101820] w-[100%] backdrop-blur-2xl fixed flex top-0 left-0 justify-between items-center z-[1000] px-[50px]">
         <div class="flex items-center">
             <img src="img/Quizzical-logo.png" alt="" class="w-[80px] h-[78px]">
@@ -30,7 +29,7 @@
                 <a href="#Howitworks" class="text-white transition-all ease-in-[0.5s] hover:text-[#FEE715]">How It Works</a>
             </li>
 
-            <a href="">
+            <a href="./Login_page.html">
                 <input type="button" value="Get Started" class="ml-[2rem] text-black rounded-[10px] bg-[#FEE715] p-[8px] font-medium transition-all ease-in-[0.5s] hover:bg-[#ccb800] active:opacity-70">
             </a>
         </ul>
@@ -143,7 +142,7 @@
                 </div>
                 <div class="p-[10px] mt-[10px]">
                     <p class="mb-[2rem] text-gray-600">Join Quizzical Hub now and start your quiz!</p>
-                    <a href="#" class="p-[20px] mt-[2rem] bg-black text-white font-semibold rounded-[10px] transition-all ease-in-[0.5s] hover:bg-[#101820] active:opacity-70">
+                    <a href="./Login_page.html" class="p-[20px] mt-[2rem] bg-black text-white font-semibold rounded-[10px] transition-all ease-in-[0.5s] hover:bg-[#101820] active:opacity-70">
                         <input type="button" value="Get Started">
                         <i class="fa-solid fa-angle-right text-[1rem] ml-2 arrow-transition"></i>
                     </a>
@@ -186,6 +185,28 @@
             </div>
         </div>
     </div>
+    <footer class="p-[20px] py-[1rem] bg-[#101820] text-center items-center">
+        <div class="m-auto max-w-[600px]">
+            <div class="flex items-center">
+                <img src="img/Smac-logo-Transparent.png" alt="" class="w-[75px]">
+                <img src="img/Quizzical-logo.png" alt="" class="w-[75px]">
+                <ul class="text-white flex">
+                    <li><h3 class="text-[#FEE715]">&copy;2024-2025 Krv Academy</h3></li>
+                    <li class="ml-[1rem] inline-block">
+                        <a href="#Home" class="text-white transition-all ease-in-[0.5s] hover:text-[#FEE715]">Home</a>
+                    </li>
+
+                    <li class="ml-[1rem]">
+                        <a href="#About" class="text-white transition-all ease-in-[0.5s] hover:text-[#FEE715]">About</a>
+                    </li>
+
+                    <li class="ml-[1rem]">
+                        <a href="#Howitworks" class="text-white transition-all ease-in-[0.5s] hover:text-[#FEE715]">How It Works</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
